    preprocessed manpages instead of raw ones.
  * debian/sysdeps/*.mk, script.in/kernelcheck.sh: bump minimal kernel
    version to 2.6.18.  Closes: #499689.
  * debian/control.in/main: add Vcs-Svn and Vcs-Browser field.  Closes: 
    #499769.
  * debian/sysdeps/depflags.pl: add a conflict on nscd (<< 2.8) to nscd
    Closes: #498516).

  [ Petr Salinger ]
  * add any/local-linuxthreads-ptw.diff. Closes: #494908.
  * add kfreebsd/local-sysdeps28.diff, glibc 2.8 specific kfreebsd sysdeps.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 12 Oct 2008 22:26:06 +0200

glibc (2.7-15) unstable; urgency=low

  * debhelper.in/locales.config, debhelper.in/locales.postinst: modify
    /etc/locale.gen instead of regenerating it.  Closes: bug#494468.
  * any/cvs-nscd-getservbyport.diff: new patch from upstream to fix getservbyport()
    when nscd is used.  Closes: bug#500055.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 12 Oct 2008 23:04:27 +0200

glibc (2.7-14) unstable; urgency=low

  [ Petr Salinger ]
  * kfreebsd/local-sysdeps.diff: update to revision 2322 (from glibc-bsd).
  * extend kfreebsd/local-ftw.diff: do not use *at functions also in glob.c,
    this patch is applied only on kfreebsd, fixes globtest.out failure.
  * any/local-linuxthreads-weak.diff: new patch to pass 
    stdio-common/scanf15.out test on linuxthreads platforms, 
    although it seems to be rather gcc 4.x bug, see GCC Bugzilla Bug 37266.
    
  [ Aurelien Jarno ]
  * patches/mips/cvs-mknod.diff: new patch from upstream to allow > 255 minors
    on mips.  Closes: #493751.
  * patches/sparc/cvs-context.diff: new patch from upstream to add
    getcontext(), setcontext(), makecontext() on Sparc.  Closes: #295173.
  * patches/hppa/cvs-context.diff: new patch from upstream to add
    getcontext(), setcontext(), makecontext() on PARISC.  Closes: #492778.
  * any/local-ip6-localhost.diff: new patch from upstream BTS, to remove the
    ::1 -> 127.0.0.1 mapping.