@@ -1,1 +1,20 @@
-linuxthreads/man/pthread*.man
+linuxthreads/man/pthread_atfork.3thr
+linuxthreads/man/pthread_attr_init.3thr
+linuxthreads/man/pthread_cancel.3thr
+linuxthreads/man/pthread_cleanup_push.3thr
+linuxthreads/man/pthread_condattr_init.3thr
+linuxthreads/man/pthread_cond_init.3thr
+linuxthreads/man/pthread_create.3thr
+linuxthreads/man/pthread_detach.3thr
+linuxthreads/man/pthread_equal.3thr
+linuxthreads/man/pthread_exit.3thr
+linuxthreads/man/pthread_join.3thr
+linuxthreads/man/pthread_key_create.3thr
+linuxthreads/man/pthread_kill_other_threads_np.3thr
+linuxthreads/man/pthread_mutexattr_init.3thr
+linuxthreads/man/pthread_mutexattr_setkind_np.3thr
+linuxthreads/man/pthread_mutex_init.3thr
+linuxthreads/man/pthread_once.3thr
+linuxthreads/man/pthread_self.3thr
+linuxthreads/man/pthread_setschedparam.3thr
+linuxthreads/man/pthread_sigmask.3thr
