@@ -131,6 +131,8 @@ glibc (2.8+20080809-2) UNRELEASED; urgency=low
     #499769.
   * debian/sysdeps/depflags.pl: add a conflict on nscd (<< 2.8) to nscd
     Closes: #498516).
+  * rules, rules.d/build.mk, debhelper.in/glibc-doc.manpages: install the
+    generated manpages.
 
   [ Petr Salinger ]
   * add any/local-linuxthreads-ptw.diff. Closes: #494908.
